# recommender_api

./: .gitignore  pyproject.toml  swagger.yml
json/: context.json  user.json
src/recommender_api/: .gitignore  action.py  adaptador_modelos.py  app.py  context.py  item.py  recommendation.py  recommendation_tools.py  testes.py  testes2.py  utils.py
templates/: home.html
